made changes to CSS of app.js for background image bug on mobile browsers

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,12 @@
   }
 } */
 
+@media (max-width: 550px){
+  .App{
+    background-image: url("https://cdn.99images.com/photos/wallpapers/space/stars%20android-iphone-desktop-hd-backgrounds-wallpapers-1080p-4k-utnem.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+  }
+}
